--- a/openai-quickstart-python/templates/main.html
+++ b/openai-quickstart-python/templates/main.html
@@ -115,16 +115,16 @@
       session['guesses']|length]|min %}
       <div class="carousel-item active">
         <img
-          class="img-responsive"
-          style="width: 25%; ;"
+          class="img-responsive pop"
+          style="width: 30%; ;"
           src="{{ url_for('static', filename=session['images'][i]) }}"
         />
       </div>
       {% else %}
       <div class="carousel-item">
         <img
-          class="img-responsive"
-          style="width: 25%;"
+          class="img-responsive pop"
+          style="width: 30%;"
           src="{{ url_for('static', filename=session['images'][i]) }}"
         />
       </div>
@@ -283,7 +283,7 @@
               Guess the missing words.
             </li>
             <li>
-              You get 5 guesses and 5 images. Make sure to utilize the dropdowns.
+              You get 5 guesses and 5 images. Make sure to utilize the dropdowns and click on images to zoom in.
             </li>
             <li>
               Have fun and enjoy the challenge of guessing the AI-generated
@@ -340,6 +340,49 @@
         </div>
         <div class="modal-body">
           <canvas id="chart" height="100px" />
+        </div>
+      </div>
+    </div>
+  </div>
+    <!-- About Modal-->
+  <div
+    class="modal fade"
+    id="statsModal"
+    tabindex="-1"
+    aria-labelledby="statsModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Stats:</h1>
+          <button
+            type="button"
+            class="btn-close-white"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <canvas id="chart" height="100px" />
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">   
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
+          <button
+            type="button"
+            class="btn-close-white"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>           
+        <div class="modal-body">
+          <img src="" class="imagepreview" style="width: 100%;" >
         </div>
       </div>
     </div>
