--- a/openai-quickstart-python/templates/main.html
+++ b/openai-quickstart-python/templates/main.html
@@ -116,7 +116,7 @@
       <div class="carousel-item active">
         <img
           class="img-responsive pop"
-          style="width: 30%; ;"
+          style="width: 30%;"
           src="{{ url_for('static', filename=session['images'][i]) }}"
         />
       </div>
